# lambda-axum-example

./: .env  Cargo.toml  Makefile  api.http  cmds
src/: main.rs
src/http/: books.rs  mod.rs
