[package]
name = "cargoaxum"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.20.0"
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
lambda_http = "0.11.1"
lambda_runtime = "0.11.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

